# elm

./: .cdtproject  .cproject  .cvsignore  .gitignore  .hgignore  .project  AUTHORS  CMakeLists.txt  DEV.README  Doxyfile  INSTALL  Makefile.am  README-DEV.md  README.DEV  acinclude.m4  bootstrap  config.in  configure.in  elm.cbp  ok
include/: .cvsignore  CMakeLists.txt  Makefile.am
include/elm/: Collection.h  Iterator.h  Makefile.am  PreIterator.h  VolatilePreIterator.h  adapter.h  arch.h  arch.in  array.h  assert.h  compare.h  debug.h  delegate.h  deprecated.h  enum_info.h  equiv.h  hash.h  ini.h  int.h  io.h  iter.h  json.h  macros.h  meta.h  options.h  ptr.h  rtti.h  string.h  test.h  type_info.h  types.h  utility.h  xom.h
include/elm/alloc/: BlockAllocator.h  BlockAllocatorWithGC.h  DefaultAllocator.h  GroupedGC.h  Makefile.am  SimpleGC.h  StackAllocator.h
include/elm/avl/: GenTree.h  Map.h  Set.h
include/elm/block/: DynBlock.h  Makefile.am
include/elm/checksum/: Fletcher.h  MD5.h  Makefile.am
include/elm/data/: Array.h  ArrayList.h  Bag.h  BiDiList.h  FixedStack.h  FragTable.h  HashMap.h  HashSet.h  HashTable.h  List.h  ListMap.h  ListQueue.h  ListSet.h  Manager.h  Range.h  SortedList.h  StaticStack.h  SubCollection.h  Table.h  Tree.h  TreeBag.h  TreeMap.h  Vector.h  VectorQueue.h  custom.h  iterator.h  quicksort.h  util.h
include/elm/datastruct/: AbstractCollection.h  Array.h  Collection.h  DLList.h  HashTable.h  Indexed.h  Iterator.h  Makefile.am  Map.h  Sequence.h  SortedSet.h  Vector.h
include/elm/debug/: CrashHandler.h  Makefile.am
include/elm/dyndata/: AbstractCollection.h  Collection.h
include/elm/genstruct/: AVLMap.h  AVLTree.h  AssocList.h  DAGNode.h  DLList.h  FixArray.h  FragArray.h  FragTable.h  HashTable.h  Makefile.am  SLList.h  SortedBinMap.h  SortedBinTree.h  SortedSLList.h  Table.h  Tree.h  Vector.h  VectorQueue.h  quicksort.h
include/elm/imm/: list.h  sorted_list.h
include/elm/inhstruct/: AVLTree.h  BinTree.h  DLList.h  Makefile.am  SLList.h  SortedBinTree.h  Tree.h
include/elm/io/: BlockInStream.h  BlockOutStream.h  BufferedInStream.h  BufferedOutStream.h  FileInput.h  FileOutput.h  InFileStream.h  InStream.h  Input.h  Makefile.am  OutFileStream.h  OutStream.h  Output.h  RandomAccessStream.h  StringInput.h  StructuredOutput.h  UnixInStream.h  UnixOutStream.h  WinInStream.h  WinOutStream.h  io.h
include/elm/json/: Saver.h
include/elm/log/: Log.h
include/elm/net/: ClientSocket.h  ServerSocket.h
include/elm/option/: ActionOption.h  BoolOption.h  EnumOption.h  IntOption.h  ListOption.h  Makefile.am  Manager.h  Option.h  StandardOption.h  StringList.h  StringOption.h  SwitchOption.h  ValueOption.h
include/elm/rtti/: Class.h  Enum.h  Type.h  type_of.h
include/elm/serial/: Makefile  Makefile.am  Makefile.in  SerialClass.h  SerialTable.h  Serializer.h  Unserializer.h  XOMUnserializer.h  implement.h  interface.h
include/elm/serial2/: Makefile  Makefile.am  Makefile.in  Serializer.h  TextSerializer.h  Unserializer.h  XOMSerializer.h  XOMUnserializer.h  collections.h  data.h  macros.h  serial.h
include/elm/stree/: MarkerBuilder.h  SegmentBuilder.h  Tree.h
include/elm/string/: AutoString.h  CString.h  Formatter.h  Makefile.am  Split.h  String.h  StringBuffer.h  stream.h  utf8.h
include/elm/sys/: Directory.h  FileItem.h  Path.h  Plugger.h  Plugin.h  Process.h  ProcessBuilder.h  System.h  Thread.h
include/elm/system/: Directory.h  File.h  FileItem.h  Makefile.am  Path.h  Plugger.h  Plugin.h  Process.h  ProcessBuilder.h  StopWatch.h  System.h  SystemException.h  SystemIO.h  Thread.h
include/elm/util/: AutoComparator.h  AutoDestructor.h  AutoPtr.h  BitVector.h  Class.h  Cleaner.h  Comparator.h  ErrorHandler.h  Exception.h  Formatter.h  HashKey.h  IndexedIterator.h  Initializer.h  Makefile.am  MessageException.h  Option.h  Pair.h  Ref.h  SharedPtr.h  StrongType.h  UniquePtr.h  VarArg.h  Variant.h  Version.h  WAHVector.h  array.h  strong_type.h  test.h
include/elm/xom/: Attribute.h  Document.h  Element.h  Elements.h  Exception.h  Makefile.am  Node.h  NodeFactory.h  ParentNode.h  Serializer.h  String.h  Text.h  XIncluder.h  XSLTransform.h  dtd.h
src/: .cvsignore  CMakeLists.txt  Collection.cpp  Iterator.cpp  Makefile.am  alloc_AbstractGC.cpp  alloc_BlockAllocator.cpp  alloc_BlockAllocatorWithGC.cpp  alloc_DefaultAllocator.cpp  alloc_GroupedGC.cpp  alloc_ListGC.cpp  alloc_SimpleGC.cpp  alloc_StackAllocator.cpp  array.cpp  avl_GenTree.cpp  block_DynBlock.cpp  checksum_Fletcher.cpp  checksum_MD5.cpp  collection.cpp  concepts.h  data.cpp  data.h  data_Array.cpp  data_BinomialQueue.cpp  data_FixedStack.cpp  data_FragTable.cpp  data_HashTable.cpp  data_List.cpp  data_Range.cpp  data_SortedList.cpp  data_StaticStack.cpp  data_SubCollection.cpp  data_Tree.cpp  data_TreeBag.cpp  data_Vector.cpp  debug.cpp  debug_CrashHandler.cpp  debug_GDBCrashHandler.cpp  doc.h  dyndata_Collection.cpp  (+130 more)
test/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  check-concept.h  cmake_install.cmake  file.xml  new_avl.cpp  plugin.cpp  plugin.h  serial2.cpp  test-types.cpp  test.cc  test.cpp  test_alloc.cpp  test_ansi.cpp  test_array.cpp  test_array_list.cpp  test_assoc_list.cpp  test_autostr.cpp  test_avl.cpp  test_bag.cpp  test_bgc.cpp  test_bidilist.cpp  test_binomial_queue.cpp  test_bitvector.cpp  test_char.cpp  test_cleaner.cpp  test_compare.cpp  test_data.cpp  test_dllist.cpp  test_dtd.cpp  test_dyndata.cpp  test_enum_info.cpp  test_file.cpp  test_formatter.cpp  test_frag_table.cpp  test_hashkey.cpp  test_hashtable.cpp  test_ilist.cpp  (+55 more)
test/socket/: client.cpp  server.cpp
test/test_BitVector/: .cvsignore  Makefile.am  test_BitVector.cpp
test/test_SLList/: .cvsignore  Makefile.am  test_SLList.cpp
test/test_avl/: .cvsignore  Makefile.am  test_avl.cpp
tools/: .gitignore  CMakeLists.txt  elm-plugin.cpp
