SUBDIRS = \
	assert.h \
	block \
	checksum \
	datastruct \
	genstruct \
	inhstruct \
	io \
	option \
	string \
	util \
	serial \
	serial2 \
	system

if HAS_LIBXML
SUBDIRS += xom
endif

includeelmdir=$(includedir)/elm
includeelm_HEADERS = \
	Collection.h \
	debug.h \
	io.h \
	Iterator.h \
	meta.h \
	options.h \
	rtti.h \
	string.h \
	utility.h \
	xom.h

