SUBDIRS = \
	block \
	checksum \
	datastruct \
	debug \
	genstruct \
	inhstruct \
	io \
	option \
	string \
	util \
	serial \
	serial2 \
	system

if HAS_LIBXML
SUBDIRS += xom
endif

includeelmdir=$(includedir)/elm
includeelm_HEADERS = \
	assert.h \
	Collection.h \
	debug.h \
	deprecated.h \
	io.h \
	Iterator.h \
	PreIterator.h \
	meta.h \
	options.h \
	rtti.h \
	string.h \
	type_info.h \
	types.h \
	utility.h \
	xom.h
