includeelmgenstructdir=$(includedir)/elm/genstruct
includeelmgenstruct_HEADERS = \
	adapter.h \
	AssocList.h \
	AVLMap.h \
	AVLTree.h \
	BoolTable.h \
	DAGNode.h \
	DLList.h \
	FixArray.h \
	FragTable.h \
	HashTable.h \
	SLList.h \
	SortedSLList.h \
	SortedBinMap.h \
	SortedBinTree.h \
	Table.h \
	Tree.h \
	Vector.h \
	VectorQueue.h 

#	AVLTree.h
