includeelmiodir=$(includedir)/elm/io
includeelmio_HEADERS = \
	BlockInStream.h \
	BlockOutStream.h \
	BufferedInStream.h \
	BufferedOutStream.h \
	InFileStream.h \
	InStream.h \
	Input.h \
	io.h \
	Monitor.h \
	OutStream.h \
	OutFileStream.h \
	Output.h \
	RandomAccessStream.h \
	UnixInStream.h \
	UnixOutStream.h


