includeelmutildir=$(includedir)/elm/util
includeelmutil_HEADERS = \
	AutoComparator.h \
	AutoDestructor.h \
	AutoPtr.h \
	BitVector.h \
	Cleaner.h \
	Comparator.h \
	delegate.h \
	Equiv.h \
	Exception.h \
	Formatter.h \
	HashKey.h \
	IndexedIterator.h \
	Initializer.h \
	MessageException.h \
	Option.h \
	Pair.h \
	Ref.h \
	strong_type.h \
	test.h \
	VarArg.h \
	Version.h
